--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 .nav
 {
     color: azure;
@@ -74,11 +73,21 @@ body {
   
 
   
-  footer {
+  .footer {
     background-color: #333;
     color: white;
     text-align: center;
     padding: 10px;
   }
-
-  
+  .sa{
+      
+        background-image: url("https://wallpapercave.com/dwp1x/wp2038160.jpg");
+        text-align: center;
+        justify-content: center;
+        font-size: medium;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100vw;
+        height:100vh;
+        color:silver;
+  }  
