--- a/src/style.css
+++ b/src/style.css
@@ -91,3 +91,11 @@ body {
         height:100vh;
         color:silver;
   }  
+.sudharshan
+{   
+  background-image: url("https://images.pexels.com/photos/19112362/pexels-photo-19112362/free-photo-of-tables-chairs-and-curtains-by-windows-in-restaurant.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height:flex;
+}
